# MY-assistant

./: README.md  assistant.py  pyproject.toml  result
config/: assistant-en.yaml  assistant-fr.yaml
