[tool.poetry]
name = "ollama-voice-mac"
version = "0.1.0"
description = "assistant"
authors = ["behlock"]

[tool.poetry.dependencies]
python = "^3.10.0"
torch = "2.1.2"
torchvision = "0.16.2"
torchaudio = "2.1.2"
pyttsx3 = "2.90"
blobfile = "2.1.1"
openai = "1.7.0"
Wave = "0.0.2"
PyAudio = "0.2.14"
PyYAML = "6.0.1"
pygame = "2.5.2"
soundfile = "0.12.1"
pyObjC = "9.0.1"
openai-whisper = { git = "https://github.com/openai/whisper.git", rev = "ba3f3cd54b0e5b8ce1ab3de13e32122d0d5f98ab" }

[tool.poetry.dev-dependencies]
black = {version = ">=21",allow-prereleases = true}
flake8 = "^3.7"
mypy = "<1"
pep8-naming = "^0.8.2"
poetry = "<2"
pytest = "^7.1.3"
typed-ast = "^1.5.3"
typer = "^0.3.2"
types-requests = "^2.25.6"
vulture = "^2.3"

[tool.black]
line-length = 99
target-version = ["py310"]
extend-exclude = ".venv/*"

[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"
